VA Gateway 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -1178,6 +1178,7 @@ body{
         width:1040px;
         padding-left:50px;
         padding-right:50px;
+        background:#fff;
     }
     .header{
         padding-top:14px;
