--- a/application.css
+++ b/application.css
@@ -7,7 +7,8 @@ For more information on asset types please see http://www.getcodecloud.com/docs#
 body{
     color:#424242;
     font-family:'Open Sans';
-    background: #D6EEFA;
+    background-color: #D6EEFA;
+    background-image: url(http://assets.codecloudapp.com/sites/57d827956e6f644c5f000000/image/png/1473865116000/va_tile.png)
 }
 
 .yield{
