--- a/application.css
+++ b/application.css
@@ -1244,7 +1244,7 @@ body{
         margin-bottom: 80px;
         padding-top: 80px;
         border-top: 1px solid #979797;
-        margin-top: 20px;
+        padding-top: 20px;
     }
     
     
