--- a/application.css
+++ b/application.css
@@ -1305,7 +1305,7 @@ body{
         height:370px;
         border: 1px solid #979797;
         margin-bottom:15px;
-        margin-top:0;
+        margin:0;
     }
     
     #map2{
