VA Gateway 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -626,7 +626,7 @@ body{
     font-size: 22px;
     color: #DCBB8D;
     padding-bottom:20px;
-    margin: 20px 0;
+    padding: 20px 0;
     border-bottom: 1px solid #000;
     a{
         color: #DCBB8D;
