--- a/application.css
+++ b/application.css
@@ -626,7 +626,8 @@ body{
     font-size: 22px;
     color: #DCBB8D;
     padding-bottom:20px;
-    padding: 20px 0;
+    padding-top: 20px;
+    margin-bottom:20px;
     border-bottom: 1px solid #000;
     a{
         color: #DCBB8D;
