--- a/application.css
+++ b/application.css
@@ -628,6 +628,7 @@ body{
     padding-bottom:20px;
     padding-top: 20px;
     margin-bottom:20px;
+    margin-top:0;
     border-bottom: 1px solid #000;
     a{
         color: #DCBB8D;
