VA Gateway 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -1259,6 +1259,7 @@ body{
         &:after{
             clear:both;
             content:" ";
+            display: table;
         }
     }
     .feature_item {
