--- a/application.css
+++ b/application.css
@@ -848,6 +848,11 @@ body{
 }
 
 @media(max-width: 768px){
+    body{
+        background-color: #fff;
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
     .hidden-popup-bg{
         display:none !important;
     }
