VA Gateway 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -1031,6 +1031,8 @@ body{
     
     .header{
         padding: 15px;
+        background-color: #D6EEFA;
+        background-image: url(http://assets.codecloudapp.com/sites/57
     }
     
     .mobile_margin{
